<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="150dp"
                                    android:layout_margin="@dimen/cardview_margin"
                                    android:background="@color/transparent"
                                    android:clickable="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    card_view:cardCornerRadius="3dp"
                                    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <leosin.leosinweather.view.customView.DrawWindFanWeatherView
                android:id="@+id/custom_weather_wind_view_big"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_alignParentLeft="true"/>

            <leosin.leosinweather.view.customView.DrawWindPillarWeatherView
                android:id="@+id/custom_weather_pillar_view_big"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_alignParentLeft="true"/>

            <leosin.leosinweather.view.customView.DrawWindFanWeatherView
                android:id="@+id/custom_weather_wind_view_small"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>

            <leosin.leosinweather.view.customView.DrawWindPillarWeatherView
                android:id="@+id/custom_weather_wind_pillar_view_small"
                android:layout_width="130dp"
                android:layout_height="112dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/custom_weather_wind_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <!-- 风向 -->
            <LinearLayout
                android:id="@+id/custom_weather_wind_direct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weather_wind_direct"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"/>

                <TextView
                    android:id="@+id/custom_weather_wind_direct_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"
                    tools:text="132"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_weather_wind_cut_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/custom_weather_wind_direct"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/weather_text_distance"
                android:background="@color/gray"
                android:orientation="horizontal"></LinearLayout>

            <!-- 风速 -->
            <LinearLayout
                android:id="@+id/custom_weather_wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_weather_wind_cut_line_1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/weather_text_distance"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weather_wind_speed"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"/>

                <TextView
                    android:id="@+id/custom_weather_wind_speed_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"
                    tools:text="95"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_weather_wind_cut_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/custom_weather_wind_speed"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/weather_text_distance"
                android:background="@color/gray"
                android:orientation="horizontal"></LinearLayout>

            <!-- 风力 -->
            <LinearLayout
                android:id="@+id/custom_weather_wind_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_weather_wind_cut_line_2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/weather_text_distance"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weather_wind_power"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"/>

                <TextView
                    android:id="@+id/custom_weather_wind_power_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/weather_text"
                    android:textSize="@dimen/weather_text_size"
                    tools:text="50"/>
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
